--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
       <div id="front" class="album">
         <div id="title-box">
 
-          <h4> 'PHARRELL WILLIAMS' </h4>
+          <h4>PHARRELL WILLIAMS</h4>
 
-          Level 2 'HAPPY
+          <h1>HAPPY</h1>
 
-          Level 4 '| FROM DESPICABLE ME...' Header
+          <h4>| FROM DESPICABLE ME...</h4>
 
         </div>
       </div>
@@ -22,7 +22,7 @@
       <div id="back" class="album">
 
         <!-- Level 3 '| FROM DESPICABLE ME...' Header -->
-        
+
         <!-- Level 1 'HAPPY' Header -->
 
         <!-- Level 3 'WRITTEN BY...' Header -->
@@ -36,7 +36,7 @@
         <!-- span text 'COLUMBIARECORDS.COM' -->
 
         <br>
-        
+
         <!-- display the images hosted on [https://s3.amazonaws.com/learn-verified/sony-logo.png] -->
 
       </div>
