--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
 
         <h3>| FROM DESPICABLE ME...' Header</h3>
 
-        <!-- Level 1 'HAPPY' Header -->
+        <h1>HAPPY' Header</h1>
 
-        <!-- Level 3 'WRITTEN BY...' Header -->
+        <h3>WRITTEN BY...' Header</h3>
 
         <!-- pararaph text 'PUBLISHED BY...' -->
 
