--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
         <span>PHARRELLWILLIAMS.COM</span>
 
-        <img src="https://s3.amazonaws.com/learn-verified/columbia-logo.">
+        <img src="https://s3.amazonaws.com/learn-verified/columbia-logo.png">
 
         <!-- span text 'COLUMBIARECORDS.COM' -->
 
